--- a/styles.css
+++ b/styles.css
@@ -134,7 +134,11 @@ header {
   padding: 0;
   font-size: 30px;
   }
-  
+  @media (min-width: 767px){
+ header div {
+  font-size: calc(24px + (6 + 6 * 0.7) * ((100vw - 320px) / 1280));
+ }
+}
   @media (min-width: 200px) and (max-width: 600px) {
     .col {
       flex-basis: calc(100% - 20px);
